Setting img max-width to 100% fixes really large images spilling over their columns.

--- a/app/styles/portfolio.scss
+++ b/app/styles/portfolio.scss
@@ -57,11 +57,10 @@
 
     .project-img {
         text-align: center;
-        width: 100%;
 
         img {
             margin-top: 2.5vw;
-            width: 100%;
+            max-width: 100%;
             height: auto;
         }
     }
